--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -27,43 +27,43 @@ jobs:
       - name: Lint source code
         run: make lint
 
-  # Test:
-  #   runs-on: ubuntu-latest
-  #   needs:
-  #     - Lint
-  #   steps:
-  #     - name: Checkout repository
-  #       uses: actions/checkout@v4
-  #       with:
-  #        lfs: 'true'
+  Test:
+    runs-on: ubuntu-latest
+    needs:
+      - Lint
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+         lfs: 'true'
 
-  #     - name: Set up Python 3.12
-  #       uses: actions/setup-python@v5
-  #       with:
-  #         python-version: "3.12"
-  #         cache: "pipenv"
-  #         cache-dependency-path: |
-  #           Pipfile.lock
+      - name: Set up Python 3.12
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+          cache: "pipenv"
+          cache-dependency-path: |
+            Pipfile.lock
 
-  #     - name: Install pipenv and deps
-  #       run: |
-  #         python -m pip install --upgrade pipenv wheel
-  #         make deps
+      - name: Install pipenv and deps
+        run: |
+          python -m pip install --upgrade pipenv wheel
+          make deps
 
-  #     - name: Install dependencies
-  #       run: make deps
+      - name: Install dependencies
+        run: make deps
 
-  #     - name: Run tests
-  #       run: make test
+      - name: Run tests
+        run: make test
 
-  #     - name: Build docs
-  #       run: make docs
+      # - name: Build docs
+      #   run: make docs
 
-  #     - name: Upload backend coverage reports to Codecov
-  #       uses: codecov/codecov-action@v4
-  #       with:
-  #         flags: backend
-  #         directory: backend
-  #       env:
-  #         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      # - name: Upload backend coverage reports to Codecov
+      #   uses: codecov/codecov-action@v4
+      #   with:
+      #     flags: main
+      #     directory: .
+      #   env:
+      #     CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
