--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,7 @@ pytest-asyncio = "*"
 sphinx = "*"
 sphinxcontrib-bibtex = "*"
 furo = "*"
+types-requests = "*"
 
 [requires]
 python_version = "3.12"
