Implement pydantic models validation for JSON outputs from APIs (#8)
* pydantic models for validation

* annonars and dotty models

* utilizing pydantic models

* types-request package

* remove async and await

* add data for tests

* dotty tests

* annonars and mehari tests

* cleanup

--- a/Pipfile
+++ b/Pipfile
@@ -8,10 +8,12 @@ black = "*"
 isort = "*"
 flake8 = "*"
 mypy = "*"
-aiohttp = "*"
 pydantic = "*"
 pydantic-settings = "*"
 sphinx = "*"
+datamodel-code-generator = "*"
+requests = "*"
+responses = "*"
 
 [dev-packages]
 debugpy = "*"
@@ -21,6 +23,7 @@ pytest-asyncio = "*"
 sphinx = "*"
 sphinxcontrib-bibtex = "*"
 furo = "*"
+types-requests = "*"
 
 [requires]
 python_version = "3.12"
