--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -77,9 +77,9 @@ jobs:
           python-version: "3.12"
 
       - name: Install docs dependencies
-        run: make docs-deps
+        run: make ci-docs-deps
 
       - name: Build documentation
-        run: make docs
+        run: make ci-docs
 
 
