--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -54,7 +54,7 @@ jobs:
         run: make deps
 
       - name: Run tests
-        run: make test
+        run: make ci-test
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
