--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ sphinx = "*"
 datamodel-code-generator = "*"
 requests = "*"
 responses = "*"
+typer = {extras = ["all"], version = "*"}
 
 [dev-packages]
 debugpy = "*"
