--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ datamodel-code-generator = "*"
 requests = "*"
 responses = "*"
 typer = {extras = ["all"], version = "*"}
+setuptools = "*"
+build = "*"
 
 [dev-packages]
 debugpy = "*"
