try the new annonars pydantic model & change the counting of pathogenic vars

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 .env
 .DS_Store
+tests/assets/cdh1_annonars.json
 
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
