--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
           "type": "debugpy",
           "request": "launch",
           "module": "src.cli",
-          "args": ["NM_004360.3:c.2506G>T", "--genome-release", "grch37"],
+          "args": ["NM_000152.4:c.1A>G", "--genome-release", "grch37"],
           "console": "integratedTerminal"
       }
   ]
