replace autopvs1 with auto-acmg

--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -61,7 +61,7 @@ jobs:
         with:
           flags: main
           token: ${{ secrets.CODECOV_TOKEN }}
-          slug: bihealth/autopvs1
+          slug: bihealth/auto-acmg
   
   Docs:
     runs-on: ubuntu-latest
