--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
           "type": "debugpy",
           "request": "launch",
           "module": "src.cli",
-          "args": ["NM_000152.4:c.1A>G", "--genome-release", "grch38"],
+          "args": ["NM_000314.6:c.1134_1135insCTGG", "--genome-release", "grch37"],
           "console": "integratedTerminal"
       }
   ]
