--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Lint source code
         run: make lint
 
-  Test:
+  Unit Test:
     runs-on: ubuntu-latest
     needs:
       - Lint
@@ -54,7 +54,7 @@ jobs:
         run: make deps
 
       - name: Run tests
-        run: make ci-test
+        run: make ci-unit-test
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
@@ -62,7 +62,36 @@ jobs:
           flags: main
           token: ${{ secrets.CODECOV_TOKEN }}
           slug: bihealth/auto-acmg
-  
+
+  End2End Test:
+    runs-on: ubuntu-latest
+    needs:
+      - Lint
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+         lfs: 'true'
+
+      - name: Set up Python 3.12
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+          cache: "pipenv"
+          cache-dependency-path: |
+            Pipfile.lock
+
+      - name: Install pipenv and deps
+        run: |
+          python -m pip install --upgrade pipenv wheel
+          make deps
+
+      - name: Install dependencies
+        run: make deps
+
+      - name: Run tests
+        run: make ci-e2e-test
+
   Docs:
     runs-on: ubuntu-latest
     steps:
