--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
           "type": "debugpy",
           "request": "launch",
           "module": "src.cli",
-          "args": ["chr6:160585140:T:G", "--genome-release", "grch38"],
+          "args": ["NC_000016.10:68833355:G:T", "--genome-release", "grch38"],
           "console": "integratedTerminal"
       }
   ]
