--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
           "type": "debugpy",
           "request": "launch",
           "module": "src.cli",
-          "args": ["NM_000152.4:c.1A>G", "--genome-release", "grch38"],
+          "args": ["NM_000277.2(PAH):c.1278T>C", "--genome-release", "grch38"],
           "console": "integratedTerminal"
       }
   ]
