--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
           "type": "debugpy",
           "request": "launch",
           "module": "src.cli",
-          "args": ["NM_000441.1:c.919-2A>G", "--genome-release", "grch38"],
+          "args": ["NM_000277.2(PAH):c.472C>T", "--genome-release", "grch38"],
           "console": "integratedTerminal"
       }
   ]
