--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 tests/assets/*.json filter=lfs diff=lfs merge=lfs -text
+tests/assets/**.json filter=lfs diff=lfs merge=lfs -text
+tests/assets/**/*.json filter=lfs diff=lfs merge=lfs -text
