--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 tests/assets/*.json filter=lfs diff=lfs merge=lfs -text
+tests/assets/**.json filter=lfs diff=lfs merge=lfs -text
+tests/assets/**/*.json filter=lfs diff=lfs merge=lfs -text
 tests/e2e/cassettes/**/* filter=lfs diff=lfs merge=lfs -text
