--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 tests/assets/*.json filter=lfs diff=lfs merge=lfs -text
 tests/assets/**.json filter=lfs diff=lfs merge=lfs -text
 tests/assets/**/*.json filter=lfs diff=lfs merge=lfs -text
-lib/rmsk/**/* filter=lfs diff=lfs merge=lfs -text
+lib/rmsk/**/*.gz filter=lfs diff=lfs merge=lfs -text
+lib/rmsk/**/*.tbi filter=lfs diff=lfs merge=lfs -text
