--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -95,7 +95,7 @@ jobs:
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
         with:
-          flags: main
+          flags: e2e
           token: ${{ secrets.CODECOV_TOKEN }}
           slug: bihealth/auto-acmg
 
