Finish Autopm4bp3 (#132)
* change ba1...

* add e2e coverage

* rmsk

* wip

* docs

* e2e flag for e2e coverage

* api tests

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 tests/assets/*.json filter=lfs diff=lfs merge=lfs -text
 tests/assets/**.json filter=lfs diff=lfs merge=lfs -text
 tests/assets/**/*.json filter=lfs diff=lfs merge=lfs -text
+lib/rmsk/**/*.gz filter=lfs diff=lfs merge=lfs -text
+lib/rmsk/**/*.tbi filter=lfs diff=lfs merge=lfs -text
