--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,5 @@ tests/assets/**.json filter=lfs diff=lfs merge=lfs -text
 tests/assets/**/*.json filter=lfs diff=lfs merge=lfs -text
 lib/rmsk/**/*.gz filter=lfs diff=lfs merge=lfs -text
 lib/rmsk/**/*.tbi filter=lfs diff=lfs merge=lfs -text
+lib/uniprot/**/*.gz filter=lfs diff=lfs merge=lfs -text
+lib/uniprot/**/*.tbi filter=lfs diff=lfs merge=lfs -text
