--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
           "type": "debugpy",
           "request": "launch",
           "module": "src.cli",
-          "args": ["NM_000277.2(PAH):c.707-7A>T", "--genome-release", "grch37"],
+          "args": ["chr1:1234:A:G", "--genome-release", "grch37"],
           "console": "integratedTerminal"
       }
   ]
