--- a/Pipfile
+++ b/Pipfile
@@ -16,10 +16,6 @@ typing-extensions = "*"
 msgpack = "*"
 seqrepo = "*"
 pytabix = "*"
-jupyterlab = "*"
-pandas = "*"
-pandas-stubs = "*"
-matplotlib = "*"
 
 [dev-packages]
 mypy = "*"
@@ -36,6 +32,13 @@ sphinxcontrib-bibtex = "*"
 sphinxawesome-theme = "*"
 types-requests = "*"
 pytest-cov = "*"
+genebe = "*"
+cyvcf2 = "*"
+mmh3 = "*"
+jupyterlab = "*"
+pandas = "*"
+pandas-stubs = "*"
+matplotlib = "*"
 
 [requires]
 python_version = "3.12"
