--- a/Pipfile
+++ b/Pipfile
@@ -39,6 +39,9 @@ jupyterlab = "*"
 pandas = "*"
 pandas-stubs = "*"
 matplotlib = "*"
+scikit-learn = "*"
+scipy = "*"
+seaborn = "*"
 
 [requires]
 python_version = "3.12"
