migrate from requests to httpx

--- a/Pipfile
+++ b/Pipfile
@@ -7,8 +7,6 @@ name = "pypi"
 build = "*"
 pydantic = "*"
 pydantic-settings = "*"
-requests = "*"
-responses = "*"
 typer = "*"
 setuptools = "*"
 loguru = "*"
@@ -16,6 +14,7 @@ typing-extensions = "*"
 msgpack = "*"
 seqrepo = "*"
 pytabix = "*"
+httpx = "*"
 
 [dev-packages]
 mypy = "*"
@@ -25,12 +24,9 @@ isort = "*"
 flake8 = "*"
 black = "*"
 pytest = "*"
-aioresponses = "*"
-pytest-asyncio = "*"
 sphinx = "*"
 sphinxcontrib-bibtex = "*"
 sphinxawesome-theme = "*"
-types-requests = "*"
 pytest-cov = "*"
 genebe = "*"
 cyvcf2 = "*"
@@ -43,6 +39,7 @@ scikit-learn = "*"
 scipy = "*"
 seaborn = "*"
 pytest-env = "*"
+pytest-httpx = "*"
 
 [requires]
 python_version = "3.12"
