--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ Homepage = "https://github.com/bihealth/auto-acmg"
 Documentation = "https://auto-acmg.readthedocs.io/en/latest"
 
 [tool.pytest.ini_options]
-required_plugins = ["pytest-env"]
+required_plugins = ["pytest-httpx", "pytest-env"]
 markers = [
     "remote: marks test as calling to API at https://reev.bihealth.org",
 ]
