--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
           "type": "debugpy",
           "request": "launch",
           "module": "src.cli",
-          "args": ["chr1:1234:A:G", "--genome-release", "grch37"],
+          "args": ["NM_000257.3(MYH7):c.3036C>T", "--genome-release", "grch37"],
           "console": "integratedTerminal"
       },
       {
