--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
           "type": "debugpy",
           "request": "launch",
           "module": "src.cli",
-          "args": ["NM_005633.3(SOS1):c.1018C>T", "--genome-release", "grch38"],
+          "args": ["NM_000257.3(MYH7):c.1157A>G", "--genome-release", "grch37"],
           "console": "integratedTerminal"
       },
       {
