--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,6 @@ pydantic-settings = "*"
 typer = "*"
 setuptools = "*"
 loguru = "*"
-typing-extensions = "*"
 msgpack = "*"
 seqrepo = "*"
 pytabix = "*"
@@ -18,6 +17,7 @@ httpx = "*"
 
 [dev-packages]
 mypy = "*"
+typing-extensions = "*"
 datamodel-code-generator = "*"
 debugpy = "*"
 isort = "*"
@@ -40,6 +40,7 @@ scipy = "*"
 seaborn = "*"
 pytest-env = "*"
 pytest-httpx = "*"
+pytest-recording = "*"
 
 [requires]
 python_version = "3.12"
