--- a/.gitattributes
+++ b/.gitattributes
@@ -5,9 +5,9 @@ lib/rmsk/**/*.gz filter=lfs diff=lfs merge=lfs -text
 lib/rmsk/**/*.tbi filter=lfs diff=lfs merge=lfs -text
 lib/uniprot/**/*.gz filter=lfs diff=lfs merge=lfs -text
 lib/uniprot/**/*.tbi filter=lfs diff=lfs merge=lfs -text
-tests/e2e/cassetes/** filter=lfs diff=lfs merge=lfs -text
-tests/e2e/cassetes/**/** filter=lfs diff=lfs merge=lfs -text
-tests/integ/cassetes/** filter=lfs diff=lfs merge=lfs -text
-tests/integ/cassetes/**/** filter=lfs diff=lfs merge=lfs -text
+tests/e2e/cassettes/** filter=lfs diff=lfs merge=lfs -text
+tests/e2e/cassettes/**/** filter=lfs diff=lfs merge=lfs -text
+tests/integ/cassettes/** filter=lfs diff=lfs merge=lfs -text
+tests/integ/cassettes/**/** filter=lfs diff=lfs merge=lfs -text
 tests/e2e/cassettes/**/* filter=lfs diff=lfs merge=lfs -text
 tests/integ/cassettes/**/* filter=lfs diff=lfs merge=lfs -text
