--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,6 @@ tests/assets/**/*.json filter=lfs diff=lfs merge=lfs -text
 lib/rmsk/**/*.gz filter=lfs diff=lfs merge=lfs -text
 lib/rmsk/**/*.tbi filter=lfs diff=lfs merge=lfs -text
 lib/uniprot/**/*.gz filter=lfs diff=lfs merge=lfs -text
-lib/uniprot/**/*.tbi filter=lfs diff=lfs merge=lfs -text\
+lib/uniprot/**/*.tbi filter=lfs diff=lfs merge=lfs -text
 tests/e2e/cassettes/**/* filter=lfs diff=lfs merge=lfs -text
 tests/integ/cassettes/**/**/* filter=lfs diff=lfs merge=lfs -text
