Add filter for warnings in pytest

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,9 @@ env = [
     "USE_CACHE=0",
     "API_REEV_URL=https://reev.cubi.bihealth.org/internal/proxy",
 ]
+filterwarnings = [
+    "ignore::DeprecationWarning"
+]
 
 
 [tool.mypy]
