--- a/codecov.yml
+++ b/codecov.yml
@@ -18,6 +18,10 @@ coverage:
 # Ignoring Paths
 # --------------
 # which folders/files to ignore
+ignore:
+  - "test/*"
+  - "src/bench/*"
+  - "src/core/cache.py"
 
 # Pull request comments:
 # ----------------------
