--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ msgpack = "*"
 seqrepo = "*"
 pytabix = "*"
 httpx = "*"
+yoyo-migrations = "*"
 
 [dev-packages]
 mypy = "*"
@@ -41,6 +42,7 @@ seaborn = "*"
 pytest-env = "*"
 pytest-httpx = "*"
 pytest-recording = "*"
+pytest-asyncio = "*"
 
 [requires]
 python_version = "3.12"
