--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
           "type": "debugpy",
           "request": "launch",
           "module": "src.cli",
-          "args": ["NM_000277.2:c.1147C>T", "--genome-release", "grch37"],
+          "args": ["NM_000133.3(F9):c.316G>A", "--genome-release", "grch37"],
           "console": "integratedTerminal"
       },
       {
