--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,8 @@ env = [
 filterwarnings = [
     "ignore::DeprecationWarning"
 ]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
 
 
 [tool.mypy]
