Provide an API for AutoACMG (#216)

--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,9 @@ seqrepo = "*"
 pytabix = "*"
 httpx = "*"
 yoyo-migrations = "*"
+fastapi = "*"
+uvicorn = "*"
+pytest-mock = "*"
 
 [dev-packages]
 mypy = "*"
