--- a/.dockerignore
+++ b/.dockerignore
@@ -4,6 +4,7 @@
 .idea
 .git
 .gitignore
+.gitattributes
 .mypy_cache
 .pytest_cache
 __pycache__
@@ -16,3 +17,23 @@ src/bench/tmp/*.csv
 .DS_Store
 *.json
 *.so
+*.log
+temp/
+tmp/
+docs/
+*.md
+dist/
+build/
+*.egg-info
+*.egg
+site/
+tests/
+*.pyc
+*.env
+src/bench/
+.coverage
+.readthedocs.yaml
+codecov.yml
+comparison.log
+coverage.lcov
+LICENSE
