--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,4 @@
 DEBUG=1
 USE_CACHE=1
 API_REEV_URL=https://reev.cubi.bihealth.org/internal/proxy
-SEQREPO_DATA_DIR=<path_to_seqrepo_data_dir>
+SEQREPO_DATA_DIR=/home/username/seqrepo/master
