--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,9 @@
-DEBUG=1
-USE_CACHE=1
+# Disable debug mode per default
+DEBUG=0
+# Disable cache to avoid memory issues
+USE_CACHE=0
+# Use the REEV API. Change it if you have other instance of REEV.
 API_REEV_URL=https://reev.cubi.bihealth.org/internal/proxy
-SEQREPO_DATA_DIR=/home/username/seqrepo/master
+# Default path to seqrepo data for Docker. Change it to your local development path.
+# It can look like this: "/home/<username>/seqrepo/master"
+SEQREPO_DATA_DIR=
