--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ cache/**
 # Prediction file
 prediction.json
 
+# Seqrepo archives
+seqrepo.tar.gz
+seqrepo_master.tar.gz
+
 # DS_Store file
 .DS_Store
 
