--- a/.github/workflows/docker-cleanup-pr.yml
+++ b/.github/workflows/docker-cleanup-pr.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: bots-house/ghcr-delete-image-action@v1.1.0
         with:
           owner: bihealth
-          name: auto-acmg
+          name: auto_acmg
           token: ${{ secrets.GITHUB_TOKEN }}
           tag: pr-${{github.event.pull_request.number}}
         continue-on-error: true
