--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -14,7 +14,7 @@ name: Docker Build
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: auto-acmg
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   Image-Build-Push:
