Add custom urls for reev microservices

--- a/.env.dev
+++ b/.env.dev
@@ -6,4 +6,4 @@ USE_CACHE=0
 API_REEV_URL=https://reev.cubi.bihealth.org/internal/proxy
 # Default path to seqrepo data for Docker. Change it to your local development path.
 # It can look like this: "/home/<username>/seqrepo/master"
-SEQREPO_DATA_DIR=
+AUTO_ACMG_SEQREPO_DATA_DIR=
