--- a/.env.dev
+++ b/.env.dev
@@ -4,6 +4,9 @@ DEBUG=0
 USE_CACHE=0
 # Use the REEV API. Change it if you have other instance of REEV.
 API_REEV_URL=https://reev.cubi.bihealth.org/internal/proxy
+AUTO_ACMG_API_ANNONARS_URL=https://reev.cubi.bihealth.org/internal/proxy/annonars
+AUTO_ACMG_API_MEHARI_URL=https://reev.cubi.bihealth.org/internal/proxy/mehari
+AUTO_ACMG_API_DOTTY_URL=https://reev.cubi.bihealth.org/internal/proxy/dotty
 # Default path to seqrepo data for Docker. Change it to your local development path.
 # It can look like this: "/home/<username>/seqrepo/master"
 AUTO_ACMG_SEQREPO_DATA_DIR=
