--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -27,6 +27,35 @@ jobs:
       - name: Lint source code
         run: make lint
 
+  Check-OpenAPI-Schema:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+         lfs: 'true'
+
+      - name: Set up Python 3.12
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+          cache: "pipenv"
+          cache-dependency-path: |
+            Pipfile.lock
+
+      - name: Install pipenv and deps
+        run: |
+          python -m pip install --upgrade pipenv wheel
+          make deps
+
+      - name: Dump OpenAPI Schema
+        run: make dump-openapi
+
+      - name: Check for OpenAPI schema changes
+        run: |
+          diff openapi.yaml /tmp/openapi.yaml
+        shell: bash -euo pipefail {0}
+
   Unit-Test:
     runs-on: ubuntu-latest
     needs:
