Fix special ci dump

--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -53,7 +53,7 @@ jobs:
 
       - name: Check for OpenAPI schema changes
         run: |
-          diff openapi.yaml tmp/openapi.yaml
+          diff openapi.yaml ci-openapi.yaml
         shell: bash -euo pipefail {0}
 
   Unit-Test:
