--- a/Pipfile
+++ b/Pipfile
@@ -18,7 +18,7 @@ yoyo-migrations = "*"
 fastapi = "*"
 uvicorn = "*"
 pytest-mock = "*"
-types-pyyaml = "*"
+PyYAML = "*"
 
 [dev-packages]
 mypy = "*"
@@ -46,6 +46,7 @@ pytest-env = "*"
 pytest-httpx = "*"
 pytest-recording = "*"
 pytest-asyncio = "*"
+types-PyYAML = "*"
 
 [requires]
 python_version = "3.12"
