Change the cache settings

--- a/.env.dev
+++ b/.env.dev
@@ -1,7 +1,7 @@
 # Disable debug mode per default
 DEBUG=0
 # Disable cache to avoid memory issues
-USE_CACHE=0
+AUTO_ACMG_USE_CACHE=0
 # Use the REEV API. Change it if you have other instance of REEV.
 API_REEV_URL=https://reev.cubi.bihealth.org/internal/proxy
 AUTO_ACMG_API_ANNONARS_URL=https://reev.cubi.bihealth.org/internal/proxy/annonars
